--- a/PlantillaModernUI/Forms/Forms.csproj
+++ b/PlantillaModernUI/Forms/Forms.csproj
@@ -50,6 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormBaseChild.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBaseChild.Designer.cs">
+      <DependentUpon>FormBaseChild.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuForms\FormConfiguracion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuForms\FormConfiguracion.Designer.cs">
+      <DependentUpon>FormConfiguracion.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuForms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,8 +112,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormBaseChild.resx">
+      <DependentUpon>FormBaseChild.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuForms\FormCliente.resx">
       <DependentUpon>FormCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuForms\FormConfiguracion.resx">
+      <DependentUpon>FormConfiguracion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForms\FormContabilidad.resx">
       <DependentUpon>FormContabilidad.cs</DependentUpon>
@@ -147,7 +165,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{ed87265e-a40d-4673-b648-f6136b59a7fa}</Project>
+      <Name>Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Logic\Logic.csproj">
+      <Project>{f4d594b6-51d7-487d-af64-df7c026dd82b}</Project>
+      <Name>Logic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Images\borde.jpg" />
     <Content Include="Images\LOGO_MENU.png" />
